--- a/.github/workflows/tutorial1.yaml
+++ b/.github/workflows/tutorial1.yaml
@@ -1,1 +1,34 @@
+name: tutorial1
+on: 
+  push:
+    branches:
+      - dev
 
+jobs:
+    job1:
+        name: job1
+        runs-on: ubuntu-latest
+        steps:
+        - name: setup python
+          uses: actions/setup-python@v4
+          with:
+              python-version: 3.9
+        - name: check version of python
+          run: python --version
+    
+    job2:
+        name: job2
+        runs-on: windows-latest
+        steps:
+        - name: step2
+          run: | 
+              echo "Hello from job2"
+              echo %DATE%
+    job3:
+        name: job3
+        runs-on: ubuntu-latest
+        steps:
+        - name: step3
+          run: |
+              echo "Hello from job1"
+              date
